// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceTableRowMenuItemActions table.actions.compliance.remove is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.remove-hcmcompliance.heading",
        "label": "modal.remove-hcmcompliance.label",
        "primaryBtn": "modal.remove-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-remove",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.disable is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.disable-hcmcompliance.heading",
        "label": "modal.disable-hcmcompliance.label",
        "primaryBtn": "modal.disable-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-disable",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.edit is called as expected 1`] = `
Array [
  "undefined/all/default/policy-pod/edit",
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.enable is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.enable-hcmcompliance.heading",
        "label": "modal.enable-hcmcompliance.label",
        "primaryBtn": "modal.enable-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-enable",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.enforce is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.enforce-hcmcompliance.heading",
        "label": "modal.enforce-hcmcompliance.label",
        "primaryBtn": "modal.enforce-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-enforce",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.inform is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.inform-hcmcompliance.heading",
        "label": "modal.inform-hcmcompliance.label",
        "primaryBtn": "modal.inform-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-inform",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.launch.cluster is called as expected 1`] = `
Array [
  "website",
  "_blank",
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.policy.remove is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.remove-hcmcompliance.heading",
        "label": "modal.remove-hcmcompliance.label",
        "primaryBtn": "modal.remove-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-remove",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.remove is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.remove-hcmcompliance.heading",
        "label": "modal.remove-hcmcompliance.label",
        "primaryBtn": "modal.remove-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-remove",
    },
    "type": "MODAL_UPDATE",
  },
]
`;
